<resources>
    <string name="app_name">Ropi App</string>
    <string name="email_cim">Email Cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="name">Név</string>
    <string name="password_again">Jelszó megerősítés</string>
    <string name="address">Lakcím</string>
    <string name="cancel">Mégse</string>
    <string name="phone">Telefonszám</string>
    <string name="guest">Vendég</string>
    <string name="google">Bejelentkezés Googlefiókkal</string>
    <string name="default_web_client_id">your-client-id.apps.googleusercontent.com</string>
    <string name="games">Meccsek</string>
    <string name="profile">Profil</string>
    <string name="logout">Kijelentkezés</string>
    <string name="search">Search</string>
    <string name="leage">Bajnokság</string>
    <string name="email">Email:</string>
    <string name="change">Módosítás</string>
    <string name="save">Mentés</string>
    <string name="deleteButton">Fiók törlése</string>
    <string name="alarm">Értesítés indítása</string>
    <string name="rank">Helyezés</string>
    <string name="team_name">Csapat Neve</string>
    <string name="points">Pontok</string>

</resources>