<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Profil"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/addressEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="82dp"/>

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>